--- a/src/Application/Sonata/MediaBundle/Resources/views/Media/edit.html.twig
+++ b/src/Application/Sonata/MediaBundle/Resources/views/Media/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends "ApplicationSonataUserBundle::layout.html.twig" %}
+{% extends "ApplicationSonataMediaBundle::layout.html.twig" %}
 
   {% block stylesheets %}
 {{ parent() }}
@@ -13,11 +13,11 @@
 
 {% block content_header '' %}
 {% block title %}
-EDITION MEDIA
+EDITION USER
 {% endblock %}
 {% block content %}
 
-    <form action="{{ path('users_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+    <form action="{{ path('usermedia_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
         <p>
@@ -27,12 +27,12 @@ EDITION MEDIA
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('users') }}">
+        <a href="{{ path('usermedia') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <form action="{{ path('users_delete', { 'id': entity.id }) }}" method="post">
+        <form action="{{ path('usermedia_delete', { 'id': entity.id }) }}" method="post">
             <input type="hidden" name="_method" value="DELETE" />
             {{ form_widget(delete_form) }}
             <button type="submit">Delete</button>
