test image posts

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -141,6 +141,8 @@
                                                                             
                                                                         <li><a href="{{ path('epost') }}"><i class="icon-plus-sign"></i> {{ 'DashBoard Posts'|trans }}</a></li>
                                                                         <li><a href="{{ path('epost_mesposts') }}"><i class="icon-plus-sign"></i> {{ 'Mes Posts'|trans }}</a></li>
+                                                                        <li><a href="{{ path('epost_comment_ownerview') }}"><i class="icon-plus-sign"></i> {{ 'Mes Commentaires'|trans }}</a></li>
+                                                                        <li><a href="{{ path('epost_comment_ownerblogview') }}"><i class="icon-plus-sign"></i> {{ 'Mes Posts-Commentaires'|trans }}</a></li>
                                                                         <li><a href="{{ path('epost_propositions') }}"><i class="icon-plus-sign"></i> {{ 'Groupe-Posts'|trans }}</a></li>
                                                                            <li><a href="{{ path('epostnotes') }}"><i class="icon-camera"></i> {{ 'Notes-Posts'|trans }}</a></li>
                                                                         <li><a href="{{ path('epost_indexserch') }}"><i class="icon-camera"></i> {{ 'Recherche Posts'|trans }}</a></li>
