--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -146,6 +146,7 @@
                                                                         <li><a href="{{ path('epost_propositions') }}"><i class="icon-plus-sign"></i> {{ 'Groupe-Posts'|trans }}</a></li>
                                                                            <li><a href="{{ path('epostnotes') }}"><i class="icon-camera"></i> {{ 'Notes-Posts'|trans }}</a></li>
                                                                         <li><a href="{{ path('epost_indexserch') }}"><i class="icon-camera"></i> {{ 'Recherche Posts'|trans }}</a></li>
+                                                                            <li><a href="{{ path('usermedia') }}"><i class="icon-camera"></i> {{ 'Medias'|trans }}</a></li>
                                                                
 
          {% endif %}
