--- a/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
@@ -32,7 +32,7 @@ POSTS DE MON GROUPE
         <tr class="title"> 
                  <th>Id</th>
                 <th>Name</th>
-                <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
+                <th{% if paginationa.isSorted('c.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.name') }}</th>
                 <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
                <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
 {{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
