En cours: systeme de notes

--- a/app/Resources/views/basen.html.twig
+++ b/app/Resources/views/basen.html.twig
@@ -34,7 +34,9 @@
       padding-top: 0;
     }
   }*/
-  
+  .container-fluid {
+       position:relative;
+  }
   </style>
 {% stylesheets 
  '@ApplicationCertificatsBundle/Resources/public/css/certificatscenter.css' 
@@ -125,9 +127,9 @@
     
     </div>
         
+   </div></div>     
         
-        
-        
+      </div>  
         
         
         
