--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
 
   <style type="text/css">
  
-  
+  #content{ position:relative;}
   /*@media (max-width: 1024px) {
     body {
       padding-top: 0;
