--- a/src/Application/EpostBundle/Resources/views/Epost/show.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/show.html.twig
@@ -3,7 +3,7 @@
   {% block stylesheets %}
 {{ parent() }}
       <link rel="stylesheet" href="{{ asset('bundles/applicationepost/css/sliding.css') }}" type="text/css" media="all"/>
-     
+      <link rel="stylesheet" href="{{ asset('css/comments.css') }}" type="text/css" media="all"/>
 <style>
    
         .mytext {
@@ -50,28 +50,19 @@ width: 100%;
 height: 135px;
 padding: 0.1em;
 }
-
-.sidebar .section { margin-bottom: 20px; }
-.sidebar h3 { line-height: 1.2em; font-size: 20px; margin-bottom: 10px; font-weight: normal; background: #eee; padding: 5px;  }
-.sidebar p { line-height: 1.5em; margin-bottom: 20px; }
-.sidebar ul { list-style: none }
-.sidebar ul li { line-height: 1.5em }
-.sidebar .small { font-size: 12px; }
-.sidebar .comment p { margin-bottom: 5px; }
-.sidebar .comment { margin-bottom: 10px; padding-bottom: 10px; }
-.sidebar .tags { font-weight: bold; }
-.sidebar .tags span { color: #000; font-size: 12px; }
-.weight-1 { font-size: 12px; }
-.weight-2 { font-size: 15px; }
-.weight-3 { font-size: 18px; }
-.weight-4 { font-size: 21px; }
-.weight-5 { font-size: 24px; }
 </style> 
   {% endblock %}
      
 {% block javascripts %}
       {{ parent() }}
 {{ tinymce_init() }}
+ <link rel="stylesheet" href="{{ asset('css/jquery.rating.css') }}" type="text/css" media="all"/>
+   
+{#
+  <script src="{{ asset('js/comments.js') }}" type="text/javascript"></script>
+  #}             
+ 
+
  <script>
 $(function() {
      // most effect types need no options passed by default
@@ -118,6 +109,12 @@ collapsible: true
      
         {{ entity.createdAt|created_ago }}
    
+        {% if entity.globalnote is defined %}
+       Note Globale: <span class="badge badge-warning"> {{ entity.globalnote }}</span>
+        {% else %}
+        <span class="badge badge-warning">0</span>
+        
+        {% endif %}
     <h1 class="sonata-blog-post-title">
     {{ entity.name }} Par
         <span class="sonata-blog-post-author">
@@ -158,37 +155,41 @@ collapsible: true
       
             
             <table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr class="title"> 
-                 <th>Id</th>
-                 <th>User</th>
-                <th>Date</th>
-                <th>Type</th>
-                <th>Commentaire</th>
-                
-        </tr>
-    </thead>
+    
       
         <tbody>
-{% for comment in comments %}
+              {% for comment in paginationa %}
+    {#
+{% for comment in comments %}#}
+                <thead>
+        <tr class="title"> 
+                 <th>{{ comment.created|date}} Par {{ comment.user }} 
+                     ({{ comment.id }} - 
+                 {% if comment.isComment == 0 %}C{% else %}D
+                {% endif %})
+                 </th>
+                 
+        </tr>
+    </thead>
+    
             <tr>
-                <td>{{ comment.id }}</td>
-                <td>{{ comment.user }}</td>
-                
-                <td>{{ comment.created|date('l, F j, Y') }}</td>
-                {% if comment.isComment == 0 %}
-                 <td> <p>C</p></td>
-                {% else %}
-                 <td> <p>D</p></td>
-                {% endif %}
             {#    <td> <p>{{ comment.isComment }}</p></td>#}
-                <td> <p>{{ comment.comment|raw }}</p></td>
+                <td> <p>{{ comment.comment|raw }} 
+                        <br>
+                     </p></td>
 
     </tr>
+     {#<tr><td>{% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': entity.name} %}
+             </td></tr>#}
   {% endfor %}
-    
+    <tr><td>
+        {{ knp_pagination_render(paginationa) }}
+                </td></tr>
             </tbody>
         </table>
+    
+            
+ 
 {% else %}
     <p>Il n'y a pas de commentaires pour ce POST...</p>
 {% endif %}
@@ -200,9 +201,16 @@ collapsible: true
         {# .. #}
 
            <hr>
-        <h3>Laisser un commentaire</h3>
+        <h3>Ajouter un commentaire</h3>
         {% render controller('ApplicationEpostBundle:EpostComments:new', { 'epost_id': entity.id }) %}
 
     </section>
+ 
+ {# l'id du thread est l'id , ancestor est la reference du thread #}
+
+  {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id':'ghgjh', 'epost':entity.id} %}
+{#
   
+  {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': 'ghgjh','epost':entity.id} %}
+  #} 
          {% endblock %}
