--- a/src/Application/EpostBundle/Resources/views/EpostNotes/index.html.twig
+++ b/src/Application/EpostBundle/Resources/views/EpostNotes/index.html.twig
@@ -38,10 +38,13 @@ MES NOTES-POSTS
 
                 <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
                 <th>Post</th>
+                <th>Post.Id</th>
                 <th>Proprietaire</th>
                 <th>Image</th>
+                <th>De</th>
                 <th{% if paginationa.isSorted('a.note') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Notes', 'a.note') }}</th>
-                       <th{% if paginationa.isSorted('a.updated') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Date', 'a.updated') }}</th>
+                <th>Note G</th> 
+                <th{% if paginationa.isSorted('a.updated') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Date', 'a.updated') }}</th>
                       <th colspan="2">Actions</th>
             </tr>
         </thead>
@@ -51,6 +54,7 @@ MES NOTES-POSTS
 
                     <td><a href="{{ path('epostnotes_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                     <td>{{ entity.epost.name }}</td>
+                    <td>{{ entity.epost.id }}</td>
                     <td>{{ entity.epost.proprietaire.username }}</td>
                     <td>  
                      {% if entity.epost.image is not null %}               
@@ -65,7 +69,10 @@ MES NOTES-POSTS
                         </td>
 
 
-                        <td>{{ entity.note }}</td>
+                       
+                         <td>{{ entity.user }}</td>
+                          <td>{{ entity.note }}</td>
+                            <td>{{ entity.epost.globalnote }}</td>
                  {% if entity.updated is defined %}
                         <td>{{ entity.updated|date('Y-m-d') }}</td>
                  {% else %}
